--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       margin-bottom: 15px;
     }
 
-    button {
+    button, select {
       margin-right: 10px;
       margin-bottom: 10px;
       padding: 8px 12px;
@@ -40,6 +40,17 @@
 
 <button onclick="obtenerArea()">Obtener coordenadas</button>
 <button onclick="consultarGBIF()">Consultar animales en esta área</button>
+
+<label for="grupo">Selecciona grupo:</label>
+<select id="grupo">
+  <option value="">Todos</option>
+  <option value="Aves">Aves</option>
+  <option value="Mammalia">Mamíferos</option>
+  <option value="Reptilia">Reptiles</option>
+  <option value="Amphibia">Anfibios</option>
+  <option value="Actinopterygii">Peces óseos</option>
+  <option value="Insecta">Insectos</option>
+</select>
 
 <h3>Coordenadas:</h3>
 <pre id="coords"></pre>
@@ -75,24 +86,30 @@
       "West: " + west;
   }
 
-  // Consultar GBIF
+  // Consultar GBIF con filtro por grupo
   async function consultarGBIF() {
 
     document.getElementById("resultados").textContent = "Consultando GBIF...";
 
     var bounds = map.getBounds();
-
     var north = bounds.getNorth();
     var south = bounds.getSouth();
     var east = bounds.getEast();
     var west = bounds.getWest();
 
+    var claseSeleccionada = document.getElementById("grupo").value;
+
     var url = "https://api.gbif.org/v1/occurrence/search?" +
               "hasCoordinate=true" +
               "&limit=100" +
-              "&kingdomKey=1" +   // Animalia
-              "&decimalLatitude=" + south + "," + north +
-              "&decimalLongitude=" + west + "," + east;
+              "&kingdomKey=1";   // Animalia
+
+    if (claseSeleccionada) {
+      url += "&class=" + claseSeleccionada;
+    }
+
+    url += "&decimalLatitude=" + south + "," + north +
+           "&decimalLongitude=" + west + "," + east;
 
     try {
       var response = await fetch(url);
