--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 </head>
 <body>
 
-<h1>🌿 iNaturalist Explorer - Solo citas verificadas</h1>
+<h1>🌿 iNaturalist Explorer</h1>
 
 <div class="controls">
   <button onclick="obtenerArea()">📍 Obtener coordenadas</button>
